projects/sbi/portal-school/k8s-config/sit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbioa-portal-react
  namespace: sbi-sit
  labels:
    app: sbioa-portal-react
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - sbi-school-sit.coherent.in
      secretName: sbioa-portal-react-tls
  rules:
    - host: "sbi-school-sit.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sbioa-portal-react-svc
                port:
                  number: 80
